<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:srcCompat="@drawable/app_logo" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="25dp" />

                    <TextView
                        android:id="@+id/title01"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:text="@string/title01"
                        android:textAlignment="center"
                        android:gravity="center_vertical|center_horizontal"
                        android:textColor="#EE993F"
                        android:textSize="22sp" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="25dp" />
                </LinearLayout>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@null"
                android:ems="10"
                android:focusable="false"
                android:inputType="none|textPersonName"
                android:text="@string/plain_text"
                android:textAlignment="center"
                android:textColor="#ED983F"
                android:textSize="12sp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="20dp"
                tools:context=".MainActivity">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/lay_cards"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="visible">

                        <ImageView
                            android:id="@+id/card1"
                            android:layout_width="wrap_content"
                            android:layout_height="300dp"
                            android:layout_weight="1"
                            android:scaleType="centerInside"
                            android:src="@drawable/_0card" />

                        <View
                            android:id="@+id/divider"
                            android:layout_width="250dp"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:background="?android:attr/listDivider" />

                        <ImageView
                            android:id="@+id/card2"
                            android:layout_width="wrap_content"
                            android:layout_height="300dp"
                            android:layout_weight="1"
                            android:scaleType="centerInside"
                            android:src="@drawable/_0aacard" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/lay_points"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <Button
                            android:id="@+id/deal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:backgroundTint="@color/t1"
                            android:text="@string/deal" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                    </LinearLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="50dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/score"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/score"
                            android:textSize="24sp"
                            android:textStyle="italic" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/amountCount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/amount_count"
                            android:textAlignment="textEnd"
                            android:textSize="24sp" />
                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>